test/configCases/errors/self-reexport/cc.js
import {something} from "./c1";

something();
